@@ -232,6 +232,8 @@ type is 'list', list of one or more compiler macros to check, optional.
 type is 'quoted' or 'list', name or list of functions to check, optional.
 .It Dv CFLAGS
 type is 'quoted', variable name to store CFLAGS values, optional.
+.It Dv SUBHDR
+type is 'list', list of header dependencies, optional.
 .El
 .It Cm CHECK_LIB
 Check a library and optionally a function.
